--- a/ma.sonpike/index.html
+++ b/ma.sonpike/index.html
@@ -1,1 +1,249 @@
-<h1>resume page</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <body>
+    <h2>Curriculum Vitae -- Mason Anthony Pike</h2>
+    <span><b>Last updated:</b> November 2024</span><br />
+    <span><b>Born:</b> 1997, Georgia, United States</span><br />
+    <span><b>Residing:</b> Ile-de-France</span>
+
+    <blockquote>
+      <h3>Employment</h3>
+    </blockquote>
+
+    <ul>
+      <ul>
+        <li>
+          2024-present, <b>Emeria Technologies</b> (Data Engineer)
+          <ul>
+            <li>
+              ETL software developer for the in-house migration pipeline,
+              written primarily in Go, though with help from an assortment of
+              Bash, Typescript, and Python scripts
+            </li>
+            <li>
+              Developed, optimized, and reviewed numerous SQL and PL/pgSQL
+              scripts to improve the performance, efficiency, and
+              maintainability of the pipeline.
+            </li>
+          </ul>
+        </li>
+        <li>
+          2023-2024, <b>Amelia Aviation</b> (Application Developer -
+          Apprenticeship)
+          <ul>
+            <li>
+              Responsible for the development and maintenance of several
+              internal applications necessary for the regular functioning of the
+              company, working mostly in PHP and Swift
+            </li>
+          </ul>
+        </li>
+        2019-2023,
+        <b>The Turner Learning Center</b>
+        <ul>
+          <li>
+            2021-23, Administrative Manager
+            <ul>
+              <li>Direct supervision of a team of 7-10 teachers</li>
+              <li>
+                Responsible for the correct application of the program, quality
+                of instruction, planning of courses, and general
+                administration/documentation.
+              </li>
+            </ul>
+          </li>
+          <li>
+            2021-23, Pedagogical Coordinator
+            <ul>
+              <li>Supervision of all B1-B2 language courses</li>
+              <li>
+                Responsible for teacher training, production of pedagogical
+                materials, course organization, and student performance.
+              </li>
+            </ul>
+          </li>
+          <li>
+            2019-23, English Teacher
+            <ul>
+              <li>
+                English teacher for all levels and ages from A2 - C2, from
+                middle school to university.
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <li>
+          2018-19:
+          <b>Jimmy Carter Presidential Library and Museum</b> (Education and
+          Cultural Outreach Assistant)
+          <ul>
+            <li>Assistant to the director of education</li>
+            <li>
+              Responsible for the production of pedagogical materials,
+              organization and training of volunteer docents, as well as the
+              production of presentations on various historical subjects.
+            </li>
+          </ul>
+        </li>
+        2016-19,
+        <b>Georgia State University</b>
+        <ul>
+          <li>
+            2016-19, Research Assistant for the Department of History
+            <ul>
+              <li>
+                Assistant to several professors of history and conservation
+              </li>
+              <li>
+                Responsible for the creation of annotated bibliographies,
+                research and synthesis of documents, and organization and
+                digitization of primary sources to be used to elevate select
+                historical sites to UNESCO Heritage status.
+              </li>
+            </ul>
+          </li>
+          <li>
+            2015-16, Research Assistant for the Department of Music
+            <ul>
+              <li>Assistant to music director</li>
+              <li>
+                Responsible for writing, directing, and presenting original
+                arrangements and compositions for chamber ensemble.
+              </li>
+              <li>
+                The work would be presented by our ensemble at the 2016 Georgia
+                State Undergraduate Research Conference.
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <li>
+          2015-16, <b>Trion City Schools</b> (Music Teacher)
+          <ul>
+            <li>Assistant to music director</li>
+            <li>
+              Responsible for the organization of documents, arrangement and
+              composition of musical scores, as well as the direction of the
+              wind orchestra and marching band.
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </ul>
+
+    <blockquote>
+      <h3>Education</h3>
+    </blockquote>
+    <ul>
+      <ul>
+        <li>
+          2024, <b>3W Academy</b> -- Professional License (Software Development)
+          <ul>
+            <li>Concepteur developpeur d'applications (CDA) (RNCP Niveau 6)</li>
+            <li>
+              Cursus primarily focused on current practices in software
+              development with a focus on backend technologies, database theory,
+              security, and devops
+            </li>
+          </ul>
+        </li>
+        <li>
+          2021, <b>University of London, Institute in Paris</b> -- M.A.
+          (Philosophy)
+          <ul>
+            <li>
+              Specialization in contemporary anglo/franco philosophy surrounding
+              computerization and linguistics
+            </li>
+            <li>
+              Thesis, <i>Sous la plage, les paves</i>, achieved highest
+              distinction
+            </li>
+          </ul>
+        </li>
+        <li>
+          2019, <b>Georgia State University</b> -- B.A. (History)
+          <ul>
+            <li>
+              Specialization in post-revolution China and its representation
+              within American social movements
+            </li>
+            <li>
+              Thesis, <i>Writing in Red Ink</i>, achieved highest distinction
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </ul>
+
+    <blockquote>
+      <h4>Articles and Publications</h4>
+    </blockquote>
+    <ul>
+      <ul>
+        <li><i>America</i>, Studies in Urban History and Culture 2021-2022</li>
+        <li>
+          <i>Imagining an Urban Future: The Invention of Ivry and Grand Paris</i
+          >, Studies in Urban History and Culture 2020-2021
+        </li>
+        <li>
+          <i>Love is War</i>, arrangement and co-direction with the 2016 Georgia
+          State University Trombone Ensemble
+        </li>
+      </ul>
+    </ul>
+
+    <blockquote>
+      <h4>Certifications</h4>
+    </blockquote>
+    <ul>
+      <ul>
+        <li>
+          Concepteur développeur d'applications - RNCP31678 (Ministére du
+          Travail, 2024)
+        </li>
+        <li>TOSA, PHP [933/1000] (3W Academy, 2023)</li>
+        <li>
+          Teaching English as a Foreign Language (Georgia State University,
+          2019)
+        </li>
+      </ul>
+    </ul>
+
+    <blockquote>
+      <h4>Natural Languages</h4>
+    </blockquote>
+    <ul>
+      <ul>
+        <li>French</li>
+        <li>English</li>
+      </ul>
+    </ul>
+
+    <blockquote>
+      <h4>Areas of Research</h4>
+    </blockquote>
+    <ul>
+      <ul>
+        <li>Relational database theory</li>
+        <li>Rust</li>
+        <li>Query "tuning"</li>
+        <li>Computing for strange or difficult systems</li>
+        <li>Functional languages</li>
+      </ul>
+    </ul>
+
+    <blockquote>
+      <h4>Miscellany</h4>
+    </blockquote>
+    <ul>
+      <ul>
+        <li>Open Source Contributor</li>
+        <li>Composer and conductor</li>
+        <li>Occasional trombonist</li>
+        <li>Writer</li>
+        <li>Jazz transcriber and archivist</li>
+      </ul>
+    </ul>
+  </body>
+</html>
