fix issue with utf-8 encoding

--- a/ma.sonpike/index.html
+++ b/ma.sonpike/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mason Pike - Software Developer / Data Engineer</title>
+  </head>
   <body>
     <h2>Curriculum Vitae -- Mason Anthony Pike</h2>
     <span><b>Last updated:</b> November 2024</span><br />
